# edubot_description

./: .gitattributes  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  package.xml  pyproject.toml
assets/: axle.part  axle.stl  base.part  base.stl  base_link.part  base_link.stl  battery.part  battery.stl  cam.part  cam.stl  cam_holder.part  cam_holder.stl  eth_plug.part  eth_plug.stl  front_plate.part  front_plate.stl  left_plate.part  left_plate.stl  omni_wheel_fl.part  omni_wheel_fl.stl  omni_wheel_fr.part  omni_wheel_fr.stl  omni_wheel_rl.part  omni_wheel_rl.stl  omni_wheel_rr.part  omni_wheel_rr.stl  part_2.part  part_2.stl  part_3.part  part_3.stl  part_4.part  part_4.stl  part_5.part  part_5.stl  part_6.part  part_6.stl  part_9.part  part_9.stl  plug_mount.part  plug_mount.stl  (+11 more)
launch/: view_model.launch.py
meshes/: base.stl
urdf/: edubot.urdf.xacro  omnibot.urdf.xacro  robot.urdf
