<?xml version="1.0"?>
<package format="3">
  <name>edubot_description</name>
  <version>0.1.0</version>
  <description>
    URDF/Xacro description package for the EduBot robot.
    Contains 3D meshes, Xacro definitions and visualization launch files.
  </description>

  <maintainer email="info@vectoral.ch">Vectoral</maintainer>
  <author>Alex Petrovic</author>
  <author>Stefan Siegler</author>
  <license file="LICENSE">PolyForm-Perimeter-1.0.0</license>

  <url type="repository">https://github.com/vectoral-robotics/edubot_description</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
